i dont know jaki opis dac i tak to tylko for me thx

--- a/index.html
+++ b/index.html
@@ -95,12 +95,74 @@
             </div>
           </div>
         </div>
-        <div>ad</div>
-        <div>ads</div>
+        <section class="wrapper2">
+          <div class="profil">
+            <img src="image/image_1.jpg" alt="my photo" />
+            <div class="profilAbout">
+              Lorem ipsum dolor sit amet, Lorem ipsum dolor sit aLorem ipsum
+              dolor sit aLorem ipsum dolor sit aconsectetur adipiscing elit.
+              Integer aante.
+            </div>
+          </div>
+          <div class="skillSet">
+            <div class="tile"><div>CSS</div></div>
+            <div class="tile"><div>HTML</div></div>
+            <div class="tile"><div>JavaScript</div></div>
+            <div class="tile"><div>C++</div></div>
+            <div class="tile"><div>Nuxt</div></div>
+            <div class="tile"><div>Vue</div></div>
+            <div class="tile"><div>Sass/Less</div></div>
+            <div class="tile"><div>React</div></div>
+            <div class="tile"><div>Node</div></div>
+          </div>
+        </section>
         <h2>Portfolio</h2>
-        <h2>Contact</h2>
+        <section class="wrapper3">
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+          <div class="portfolio"></div>
+        </section>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <h3>Contac</h3>
+        <form action="action_page.php">
+          <label for="fname">First Name</label>
+          <input
+            type="text"
+            id="fname"
+            name="firstname"
+            placeholder="Your name.."
+          />
+
+          <label for="lname">Last Name</label>
+          <input type="email" id="lname" name="email" placeholder="Your email""
+          />
+          <label for="subject">Subject</label>
+          <textarea
+            id="subject"
+            name="subject"
+            placeholder="Write something.."
+            style="height: 200px"
+          ></textarea>
+
+          <input type="submit" value="Submit" />
+        </form>
+      </div>
+      <div class="footerDown">
+          ig
+          fb
+          linkit
+          github
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
