--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         </form>
       </div>
       <div class="footerDown">
-          ig
-          fb
-          linkit
-          github
+          <i class="icon-instagram"></i>
+          <i class="icon-facebook"></i>
+          <i class="icon-github-circled"></i>
+          <i class="icon-linkedin"></i>
       </div>
     </footer>
     <script src="js/script.js"></script>
