--- a/index.html
+++ b/index.html
@@ -117,22 +117,27 @@
           </div>
         </section>
         <h2>Portfolio</h2>
+        <ul class="technologyName">
+          <li>React</li>
+          <li>Vue</li>
+          <li>Angular</li>
+        </ul>
         <section class="wrapper3">
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
-          <div class="portfolio"></div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
+          <div class="portfolio">Example project</div>
         </section>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-        <h3>Contac</h3>
+        <h3>Contact</h3>
         <form action="action_page.php">
           <label for="fname">First Name</label>
           <input
